# AMD1-1_Alpha_MarketoAcroformTest

./: .env.example  .gitignore  CLAUDE.md  FILE_LOCATIONS.md  FULL_EXPLANATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  MARKETO_INTEGRATION_PLAN.md  MOCK_VS_REAL_COMPARISON.md  PROJECT_DEMO_SLIDES.md  PROJECT_EXPLANATION.txt  QUICKSTART.md  QUICK_START_CARD.txt  README.md  REAL_COMPANY_TESTING.md  WHAT_YOU_HAVE_NOW.txt  package-lock.json  package.json  playwright.config.ts  stack.json  tsconfig.json
backend/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  enrichment.py  marketo.py
backend/app/services/: __init__.py  compliance.py  ebook_content.py  email_service.py  enrichment_apis.py  executive_review_service.py  llm_service.py  marketo_service.py  pdf_personalization_service.py  pdf_service.py  rad_orchestrator.py  supabase_client.py
backend/assets/: DESIGNER_SPEC.md
backend/assets/content/: KP_Industry_Consumer Goods.md  KP_Industry_Education.md  KP_Segment_SMB.md  (+13 more)
backend/scripts/: add_acroform_fields_to_template.py  migrate-supabase.sh  test_acroform_workflow.py  test_full_personalization.py  test_pdf_generation.py
backend/tests/: __init__.py  conftest.py  test_acroform_personalization.py  test_apollo_key.py  test_enrichment_endpoints.py  test_llm_service.py  test_marketo_webhook.py  test_pdf_personalization.py  test_rad_orchestrator.py  test_supabase_client.py
(+117 files in other folders)
